# poets

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.MD  README.md  bumpversion.py  justfile  pyproject.toml
.github/workflows/: coverage.yml
poetspy/: fixtures.py  generate.py  poets.py  test_e2e.py  test_integration.py  test_unit.py
poetspy/__snapshots__/: test_e2e.ambr  test_unit.ambr
tests/: fixtures.py  test_e2e.py  test_integration.py  test_unit.py
