[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "poetspy"
version = "0.1.4"
description = "A small cli util to show project directories"
readme = "README.md"
homepage = "https://github.com/jokeneversoke/poets"
authors = [ "JokeNeverSoke <zengjoseph@hotmail.com>",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Topic :: Terminals", "Topic :: Utilities",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
marko = "^1.0.1"
click = "^7.1.2"
toml = "^0.10.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
syrupy = "^1.2.2"
coverage = "^5.5"
coveralls = "^3.0.1"

[tool.poetry.scripts]
pt = "poetspy.poets:main"
ptg = "poetspy.generate:main"

[tool.coverage.run]
omit = [ "*/test_*", "*/fixtures*",]
source = [ "./poetspy",]
command_line = "-m pytest"
